--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# set with
-# git config --global core.excludesfile /Users/dnewcome/.gitignore
+# reference this file in git global config using git command
+# git config --global core.excludesfile '~/.gitignore'
 .dan
-
